[package]
name = "cargo-files-core"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core functionality for cargo-files"
repository = "https://github.com/dcchut/cargo-files"
documentation = "https://docs.rs/cargo-files"
readme = "../README.md"

[dependencies]
cargo_metadata = "0.15"
dunce = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "visit", "extra-traits"]}
thiserror = "1.0"

[dev-dependencies]
cargo-files-test = { path = "../cargo-files-test" }
tempfile = "3.4"
pathdiff = "0.2"
insta = { version = "1.28.0", features = ["json"] }
