[package]
name = "cargo-files-test"
version = "0.2.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Test helpers for cargo-files"
repository = "https://github.com/dcchut/cargo-files"
documentation = "https://docs.rs/cargo-files"
publish = false

[lib]
proc-macro = true

[dependencies]
once_cell = "1.17"
quote = "1.0"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
syn = "2.0"